# GammaLedger

./: .dockerignore  .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  Gemfile  LICENSE  MIGRATION_PROGRESS.md  README.md  TESTING.md  _serve_docker.sh  app.js  disclaimer.html  docker-compose.yml  feed.xml  gammaledger-migration-prompt.md  index.html  llms-full.txt  llms.txt  options_tracker_sample.json  package-lock.json  package.json  playwright.config.js  privacy.html  robots.txt  sitemap.xml  style.css  terms.html  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js
.github/: FUNDING.yml  copilot-instructions.md
app/: 404.html  app.js  index.html  options_tracker_sample.json  release.json  style.css
appv1/: app.js  index.html  style.css
blog/: blog.css  index.html  post.html  posts.json
graphify-out/: .chunk_01_files.txt  .chunk_02_files.txt  .chunk_03_files.txt  .chunk_04_files.txt  .chunk_05_files.txt  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  .graphify_update.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
mcp/: .gitignore  README.md  pyproject.toml
mcp/examples/: claude_code_config.json  claude_desktop_config.json
mcp/src/: __init__.py  database.py  server.py
mcp/src/prompts/: __init__.py  analysis.py
mcp/tests/: test_database.py
scripts/: build-blog.py  extract-final.mjs  extract-remaining.mjs  extract-wave5.mjs  extract-wave6-7.mjs  extract-wave8-11.mjs  generate-sitemap.py  verify-app-artifact.mjs  wire-modules.mjs
src/: app.js  index.html  index.js  index.ts  style.css
v2/backend/: .env.example  README.md  alembic.ini  pyproject.toml
v2/backend/alembic/: env.py  script.py.mako
v2/backend/alembic/versions/: 0001_initial.py  0002_trades.py  0003_legacy_storage_models.py  0004_auth_multi_user.py  0005_tenants_monetization.py
v2/backend/src/gammaledger/: __init__.py  cli.py  config.py  database.py  main.py
v2/backend/src/gammaledger/domains/ai/: __init__.py  router.py  schemas.py  service.py
v2/backend/src/gammaledger/domains/analytics/: __init__.py  mcp_context.py  router.py
v2/backend/src/gammaledger/domains/monetization/: __init__.py  models.py  router.py  schemas.py  service.py
v2/backend/src/gammaledger/domains/pnl/: calculations.py  router.py
v2/backend/src/gammaledger/domains/positions/: __init__.py  router.py
v2/backend/src/gammaledger/domains/settings/: __init__.py  models.py  schemas.py
v2/backend/src/gammaledger/domains/strategies/: __init__.py  router.py
v2/backend/src/gammaledger/domains/tenants/: __init__.py  middleware.py  models.py  router.py  schemas.py  service.py
v2/backend/src/gammaledger/domains/trades/: __init__.py  constants.py  models.py  router.py  schemas.py  service.py
v2/backend/src/gammaledger/domains/users/: __init__.py  dependencies.py  models.py  router.py  schemas.py  security.py  service.py
v2/backend/src/gammaledger/integrations/: __init__.py
v2/backend/src/gammaledger/integrations/ofx/: __init__.py  parser.py
v2/backend/src/gammaledger/shared/: envelope.py  migration_router.py  migrations.py
(+383 files in other folders)
